# devops-configurator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  publish.yml  test.yml
src/devops_configurator/: __init__.py  configurator.py  generators.py  parser.py  templates.py
