[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-configurator"
version = "1.0.0"
description = "Generate production-ready CI/CD configurations from plain English descriptions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Georg", email = "your-email@example.com"}
]
keywords = [
    "devops",
    "ci-cd",
    "github-actions",
    "heroku",
    "aws",
    "pipeline",
    "automation",
    "deployment"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/shawngeorgie06/devops-configurator"
Repository = "https://github.com/shawngeorgie06/devops-configurator"
Issues = "https://github.com/shawngeorgie06/devops-configurator/issues"

[project.scripts]
devops = "devops_configurator.configurator:main"
devops-configurator = "devops_configurator.configurator:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]
